# PBI-MCP

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  README.pl.md  pyproject.toml
.github/workflows/: ci.yml
src/polish_business_mcp/: __init__.py  nbp.py  server.py  vat.py
tests/: test_nbp.py  test_vat.py
