[project]
name = "polish-business-mcp"
version = "0.1.0"
description = "MCP server for Polish business data — VAT whitelist (Biała Lista) and NBP exchange rates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "neflingcreations" }]
keywords = ["mcp", "model-context-protocol", "poland", "vat", "nbp", "nip", "biala-lista"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
polish-business-mcp = "polish_business_mcp.server:main"

[project.urls]
Homepage = "https://github.com/neflingcreations/PBI-MCP"
Repository = "https://github.com/neflingcreations/PBI-MCP"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polish_business_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
